--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
     "name": "node-ext",
-    "version": "0.0.24",
+    "version": "0.0.27",
     "dependencies": {},
     "scripts": {
         "build": "webpack --config webpack.config.js --progress --mode=production",
-        "build-dev": "webpack --config webpack.config.js --progress --mode=development"
+        "build-dev": "webpack --config webpack.config.js --progress --mode=development",
+        "update-local": "npm run build && cp bin/run.js \"$(npm -g root)/node-ext/bin/run.js\""
     },
     "bin": {
         "node-ext": "./bin/node-ext.js"
