--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "node-ext",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "scripts": {
         "build": "webpack --config webpack.config.js --progress --mode=production",
         "build-dev": "webpack --config webpack.config.js --progress --mode=development",
@@ -22,5 +22,9 @@
         "file-loader": "^6.0.0",
         "ts-loader": "^9.3.1",
         "webpack-cli": "^4.10.0"
+    },
+    "dependencies": {
+        "chokidar": "^3.5.3",
+        "lodash": "^4.17.21"
     }
 }
